--- a/themesource/conversationalui/web/abstracts/_helpers.scss
+++ b/themesource/conversationalui/web/abstracts/_helpers.scss
@@ -81,12 +81,12 @@
 }
 
 //Following might be moved, all related to prompt library
-.border-selected {
+/*.border-selected {
   border-color: $brand-primary;
   border-width: 2px;
   border: 1px solid;
   padding: $spacing-small;
-}
+}*/
 
 .badge--purple {
   color: #2F008C;
